# finbot

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini  test_new_strategies.py  🧩 1️⃣ PROJECT SETUP & CLEANUP.md
backend/: app.py  routes.py
docs/notes/: DevPLanning.txt  Pattern.txt  indicator.txt  strategies.txt
docs/reports/: test_report.html
finbot/: __init__.py  cli.py
finbot/backtest/: __init__.py  engine.py  metrics.py  plot.py
finbot/core/: __init__.py  engine.py  orders.py  portfolio.py  utils.py
finbot/execution/: __init__.py  broker.py  paper.py  zerodha.py
finbot/indicators/: __init__.py  adx.py  atr.py  bollinger.py  indicators.py  macd.py  rsi.py  utils.py  vwap.py
finbot/monitoring/: __init__.py  alerts.py  dashboard.py  logger.py
finbot/risk/: __init__.py  position_sizing.py  risk_manager.py
finbot/strategies/: __init__.py  base.py  bollinger_breakout.py  macd_crossover.py  vwap_rsi_atr.py
finbot/utils/: __init__.py  config_loader.py
frontend/: README.md
notes/: FinancialStatement.dictionary.txt  profiles.txt
reports/: test_report.html
scripts/: finbot
src/ai_engine/models/strategies/: bar_up_down.py  bearish_flag.py  bullish_flag.py  cup_and_handle_bearish.py  cup_and_handle_bullish.py  dark_cloud_cover.py  doji.py  double_bottom.py  double_top.py  engulfing.py  evening_star.py  hammer.py  hanging_man.py  head_and_shoulders.py  inside_bar.py  piercing.py  (+8 more)
src/backend/: main.py
tests/: Panda_test.py  test_backtest.py  test_execution.py  test_indicators.py  test_metrics.py  test_strategies.py
